--- a/package.json
+++ b/package.json
@@ -2,5 +2,5 @@
   "author": "P1",
   "name": "wwwroot",
   "description": "Authenticate to Spotify",
-  "version": "0.0.1",
+  "version": "0.0.1"
 }
